--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,9 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-green-600: oklch(62.7% 0.194 149.214);
+    --color-blue-600: oklch(54.6% 0.245 262.881);
+    --color-violet-700: oklch(49.1% 0.27 292.581);
     --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-black: #000;
     --color-white: #fff;
@@ -214,9 +217,6 @@
   .mt-\[4rem\] {
     margin-top: 4rem;
   }
-  .mt-\[10px\] {
-    margin-top: 10px;
-  }
   .mr-\[1rem\] {
     margin-right: 1rem;
   }
@@ -229,8 +229,14 @@
   .ml-5 {
     margin-left: calc(var(--spacing) * 5);
   }
+  .ml-\[1rem\] {
+    margin-left: 1rem;
+  }
   .ml-\[2rem\] {
     margin-left: 2rem;
+  }
+  .ml-\[5rem\] {
+    margin-left: 5rem;
   }
   .ml-\[8rem\] {
     margin-left: 8rem;
@@ -250,18 +256,6 @@
   .w-5 {
     width: calc(var(--spacing) * 5);
   }
-  .w-\[40px\] {
-    width: 40px;
-  }
-  .w-\[50px\] {
-    width: 50px;
-  }
-  .w-\[60px\] {
-    width: 60px;
-  }
-  .w-\[70px\] {
-    width: 70px;
-  }
   .w-\[80px\] {
     width: 80px;
   }
@@ -270,6 +264,9 @@
   }
   .w-\[300px\] {
     width: 300px;
+  }
+  .max-w-\[1000px\] {
+    max-width: 1000px;
   }
   .max-w-\[1200px\] {
     max-width: 1200px;
@@ -300,18 +297,6 @@
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-  .grid-cols-\[2\] {
-    grid-template-columns: 2;
-  }
-  .grid-cols-\[2fr\] {
-    grid-template-columns: 2fr;
-  }
-  .grid-cols-\[4\] {
-    grid-template-columns: 4;
-  }
-  .flex-col {
-    flex-direction: column;
-  }
   .items-center {
     align-items: center;
   }
@@ -320,9 +305,6 @@
   }
   .gap-\[10px\] {
     gap: 10px;
-  }
-  .scroll-smooth {
-    scroll-behavior: smooth;
   }
   .rounded-\[5px\] {
     border-radius: 5px;
@@ -341,6 +323,10 @@
   .border-\[2px\] {
     border-style: var(--tw-border-style);
     border-width: 2px;
+  }
+  .border-t-1 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 1px;
   }
   .border-\[\#e7e7e7\] {
     border-color: #e7e7e7;
@@ -375,6 +361,9 @@
   .p-\[15px\] {
     padding: 15px;
   }
+  .px-\[2rem\] {
+    padding-inline: 2rem;
+  }
   .px-\[5rem\] {
     padding-inline: 5rem;
   }
@@ -389,9 +378,6 @@
   }
   .py-\[4rem\] {
     padding-block: 4rem;
-  }
-  .py-\[5rem\] {
-    padding-block: 5rem;
   }
   .py-\[10rem\] {
     padding-block: 10rem;
@@ -413,9 +399,6 @@
   .text-\[1\.20rem\] {
     font-size: 1.20rem;
   }
-  .text-\[1\.30rem\] {
-    font-size: 1.30rem;
-  }
   .text-\[1\.40rem\] {
     font-size: 1.40rem;
   }
@@ -430,10 +413,6 @@
   }
   .text-\[4rem\] {
     font-size: 4rem;
-  }
-  .leading-none {
-    --tw-leading: 1;
-    line-height: 1;
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -456,8 +435,17 @@
   .text-black {
     color: var(--color-black);
   }
+  .text-blue-600 {
+    color: var(--color-blue-600);
+  }
   .text-gray-700 {
     color: var(--color-gray-700);
+  }
+  .text-green-600 {
+    color: var(--color-green-600);
+  }
+  .text-violet-700 {
+    color: var(--color-violet-700);
   }
   .text-white {
     color: var(--color-white);
@@ -465,12 +453,14 @@
   .underline {
     text-decoration-line: underline;
   }
+  .opacity-50 {
+    opacity: 50%;
+  }
   .opacity-70 {
     opacity: 70%;
   }
-  .shadow {
-    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  .opacity-80 {
+    opacity: 80%;
   }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
@@ -562,10 +552,6 @@ body {
   syntax: "*";
   inherits: false;
   initial-value: solid;
-}
-@property --tw-leading {
-  syntax: "*";
-  inherits: false;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -684,7 +670,6 @@ body {
       --tw-translate-y: 0;
       --tw-translate-z: 0;
       --tw-border-style: solid;
-      --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
