--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-500: oklch(63.7% 0.237 25.331);
+    --color-red-600: oklch(57.7% 0.245 27.325);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-violet-700: oklch(49.1% 0.27 292.581);
@@ -180,6 +182,9 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
   .fixed {
     position: fixed;
   }
@@ -189,20 +194,107 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-10 {
+    top: calc(var(--spacing) * 10);
+  }
+  .top-\[-100px\] {
+    top: -100px;
+  }
+  .top-\[10px\] {
+    top: 10px;
+  }
+  .top-\[30\%\] {
+    top: 30%;
+  }
+  .top-\[50\%\] {
+    top: 50%;
+  }
+  .top-\[100\%\] {
+    top: 100%;
+  }
+  .top-\[100px\] {
+    top: 100px;
+  }
+  .top-\[200px\] {
+    top: 200px;
+  }
+  .top-\[250px\] {
+    top: 250px;
+  }
+  .top-\[260px\] {
+    top: 260px;
+  }
+  .top-\[280px\] {
+    top: 280px;
+  }
+  .top-\[300px\] {
+    top: 300px;
+  }
+  .top-\[310px\] {
+    top: 310px;
+  }
+  .top-\[320px\] {
+    top: 320px;
+  }
+  .top-\[330px\] {
+    top: 330px;
+  }
+  .top-\[400px\] {
+    top: 400px;
+  }
+  .top-\[500px\] {
+    top: 500px;
+  }
+  .top-\[1000\%\] {
+    top: 1000%;
+  }
+  .top-\[2600px\] {
+    top: 2600px;
+  }
   .right-\[50px\] {
     right: 50px;
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .left-\[5\%\] {
+    left: 5%;
+  }
+  .left-\[30\%\] {
+    left: 30%;
+  }
+  .left-\[40\%\] {
+    left: 40%;
+  }
   .left-\[50\%\] {
     left: 50%;
+  }
+  .left-\[55\%\] {
+    left: 55%;
+  }
+  .left-\[60\%\] {
+    left: 60%;
+  }
+  .left-\[70\%\] {
+    left: 70%;
+  }
+  .left-\[100\%\] {
+    left: 100%;
+  }
+  .left-\[450\%\] {
+    left: 450%;
   }
   .z-\[1000\] {
     z-index: 1000;
   }
   .m-0 {
     margin: calc(var(--spacing) * 0);
+  }
+  .m-\[0\] {
+    margin: 0;
+  }
+  .m-\[1170px\] {
+    margin: 1170px;
   }
   .m-auto {
     margin: auto;
@@ -231,6 +323,9 @@
   .mt-\[20px\] {
     margin-top: 20px;
   }
+  .mt-\[100rem\] {
+    margin-top: 100rem;
+  }
   .mr-\[1rem\] {
     margin-right: 1rem;
   }
@@ -242,6 +337,15 @@
   }
   .mb-\[10px\] {
     margin-bottom: 10px;
+  }
+  .mb-\[20px\] {
+    margin-bottom: 20px;
+  }
+  .mb-\[30px\] {
+    margin-bottom: 30px;
+  }
+  .mb-\[50px\] {
+    margin-bottom: 50px;
   }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
@@ -270,14 +374,44 @@
   .grid {
     display: grid;
   }
+  .inline-block {
+    display: inline-block;
+  }
   .table {
     display: table;
   }
   .h-\[78px\] {
     height: 78px;
   }
+  .h-\[100\%\] {
+    height: 100%;
+  }
+  .h-\[100vh\] {
+    height: 100vh;
+  }
+  .h-\[200px\] {
+    height: 200px;
+  }
+  .h-\[300px\] {
+    height: 300px;
+  }
+  .h-\[500px\] {
+    height: 500px;
+  }
+  .h-\[1000px\] {
+    height: 1000px;
+  }
   .w-5 {
     width: calc(var(--spacing) * 5);
+  }
+  .w-\[10px\] {
+    width: 10px;
+  }
+  .w-\[50\%\] {
+    width: 50%;
+  }
+  .w-\[75px\] {
+    width: 75px;
   }
   .w-\[80px\] {
     width: 80px;
@@ -288,11 +422,53 @@
   .w-\[100px\] {
     width: 100px;
   }
+  .w-\[150px\] {
+    width: 150px;
+  }
   .w-\[200px\] {
     width: 200px;
   }
   .w-\[300px\] {
     width: 300px;
+  }
+  .w-\[320px\] {
+    width: 320px;
+  }
+  .w-\[350px\] {
+    width: 350px;
+  }
+  .w-\[400px\] {
+    width: 400px;
+  }
+  .w-\[500px\] {
+    width: 500px;
+  }
+  .w-\[600px\] {
+    width: 600px;
+  }
+  .w-\[700px\] {
+    width: 700px;
+  }
+  .w-\[800px\] {
+    width: 800px;
+  }
+  .max-w-\[100px\] {
+    max-width: 100px;
+  }
+  .max-w-\[300px\] {
+    max-width: 300px;
+  }
+  .max-w-\[400px\] {
+    max-width: 400px;
+  }
+  .max-w-\[600px\] {
+    max-width: 600px;
+  }
+  .max-w-\[1000px\] {
+    max-width: 1000px;
+  }
+  .max-w-\[1170px\] {
+    max-width: 1170px;
   }
   .max-w-\[1200px\] {
     max-width: 1200px;
@@ -306,9 +482,49 @@
   .border-collapse {
     border-collapse: collapse;
   }
+  .translate-\[-10\%\] {
+    --tw-translate-x: -10%;
+    --tw-translate-y: -10%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-\[-20\%\] {
+    --tw-translate-x: -20%;
+    --tw-translate-y: -20%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-\[-40\%\] {
+    --tw-translate-x: -40%;
+    --tw-translate-y: -40%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .translate-\[-50\%\] {
     --tw-translate-x: -50%;
     --tw-translate-y: -50%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-\[-90\%\] {
+    --tw-translate-x: -90%;
+    --tw-translate-y: -90%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-\[2-\%\] {
+    --tw-translate-x: 2-%;
+    --tw-translate-y: 2-%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-\[10\%\] {
+    --tw-translate-x: 10%;
+    --tw-translate-y: 10%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-\[20\%\] {
+    --tw-translate-x: 20%;
+    --tw-translate-y: 20%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-\[50\%\] {
+    --tw-translate-x: 50%;
+    --tw-translate-y: 50%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .resize {
@@ -326,6 +542,9 @@
   .gap-\[2rem\] {
     gap: 2rem;
   }
+  .gap-\[5px\] {
+    gap: 5px;
+  }
   .gap-\[10px\] {
     gap: 10px;
   }
@@ -336,6 +555,10 @@
     border-radius: 10px;
   }
   .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-1 {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
@@ -360,6 +583,12 @@
   .border-gray-100 {
     border-color: var(--color-gray-100);
   }
+  .border-red-500 {
+    border-color: var(--color-red-500);
+  }
+  .border-red-600 {
+    border-color: var(--color-red-600);
+  }
   .bg-\[\#101820\] {
     background-color: #101820;
   }
@@ -371,6 +600,27 @@
   }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
+  }
+  .bg-white {
+    background-color: var(--color-white);
+  }
+  .bg-\[url\(\.\/img\/Background-image\.png\)\] {
+    background-image: url(./img/Background-image.png);
+  }
+  .bg-\[url\(img\/SchoolBackground\.png\)\] {
+    background-image: url(img/SchoolBackground.png);
+  }
+  .bg-cover {
+    background-size: cover;
+  }
+  .bg-fixed {
+    background-attachment: fixed;
+  }
+  .bg-center {
+    background-position: center;
+  }
+  .bg-no-repeat {
+    background-repeat: no-repeat;
   }
   .p-0 {
     padding: calc(var(--spacing) * 0);
@@ -414,6 +664,15 @@
   .px-\[50px\] {
     padding-inline: 50px;
   }
+  .px-\[60px\] {
+    padding-inline: 60px;
+  }
+  .py-\[1rem\] {
+    padding-block: 1rem;
+  }
+  .py-\[2\.50rem\] {
+    padding-block: 2.50rem;
+  }
   .py-\[2rem\] {
     padding-block: 2rem;
   }
@@ -423,11 +682,17 @@
   .py-\[4rem\] {
     padding-block: 4rem;
   }
+  .py-\[5rem\] {
+    padding-block: 5rem;
+  }
   .py-\[8rem\] {
     padding-block: 8rem;
   }
   .py-\[10rem\] {
     padding-block: 10rem;
+  }
+  .py-\[rem\] {
+    padding-block: rem;
   }
   .text-center {
     text-align: center;
@@ -451,6 +716,9 @@
   }
   .text-\[1\.50rem\] {
     font-size: 1.50rem;
+  }
+  .text-\[1\.80rem\] {
+    font-size: 1.80rem;
   }
   .text-\[1rem\] {
     font-size: 1rem;
@@ -485,6 +753,9 @@
   }
   .text-\[\#FEE715\] {
     color: #FEE715;
+  }
+  .text-\[\#ccb800\] {
+    color: #ccb800;
   }
   .text-black {
     color: var(--color-black);
