--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+@theme {
+    --color-school-text: #2A7BD9;
+    --breakpoint-cp: 300px; /* custom cellphones */
+    --breakpoint-tablet: 768px; /* custom tablet size */
+    --breakpoint-laptop: 992px; /* common laptop size */
+}
+
 *{
     scroll-behavior: smooth;
 }
@@ -7,4 +14,3 @@
 body {
     font-family: inherit;
 }
-
