--- a/src/output.css
+++ b/src/output.css
@@ -7,8 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-500: oklch(63.7% 0.237 25.331);
-    --color-red-600: oklch(57.7% 0.245 27.325);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-violet-700: oklch(49.1% 0.27 292.581);
@@ -20,8 +18,6 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
-    --text-sm--line-height: calc(1.25 / 0.875);
-    --font-weight-light: 300;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
@@ -182,9 +178,6 @@
   }
 }
 @layer utilities {
-  .absolute {
-    position: absolute;
-  }
   .fixed {
     position: fixed;
   }
@@ -194,62 +187,11 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-10 {
-    top: calc(var(--spacing) * 10);
-  }
-  .top-\[-100px\] {
-    top: -100px;
-  }
-  .top-\[10px\] {
-    top: 10px;
-  }
-  .top-\[30\%\] {
-    top: 30%;
-  }
-  .top-\[50\%\] {
-    top: 50%;
-  }
-  .top-\[100\%\] {
-    top: 100%;
-  }
-  .top-\[100px\] {
-    top: 100px;
-  }
-  .top-\[200px\] {
-    top: 200px;
-  }
   .top-\[250px\] {
     top: 250px;
   }
   .top-\[260px\] {
     top: 260px;
-  }
-  .top-\[280px\] {
-    top: 280px;
-  }
-  .top-\[300px\] {
-    top: 300px;
-  }
-  .top-\[310px\] {
-    top: 310px;
-  }
-  .top-\[320px\] {
-    top: 320px;
-  }
-  .top-\[330px\] {
-    top: 330px;
-  }
-  .top-\[400px\] {
-    top: 400px;
-  }
-  .top-\[500px\] {
-    top: 500px;
-  }
-  .top-\[1000\%\] {
-    top: 1000%;
-  }
-  .top-\[2600px\] {
-    top: 2600px;
   }
   .right-\[50px\] {
     right: 50px;
@@ -257,44 +199,14 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
-  .left-\[5\%\] {
-    left: 5%;
-  }
-  .left-\[30\%\] {
-    left: 30%;
-  }
-  .left-\[40\%\] {
-    left: 40%;
-  }
   .left-\[50\%\] {
     left: 50%;
-  }
-  .left-\[55\%\] {
-    left: 55%;
-  }
-  .left-\[60\%\] {
-    left: 60%;
-  }
-  .left-\[70\%\] {
-    left: 70%;
-  }
-  .left-\[100\%\] {
-    left: 100%;
-  }
-  .left-\[450\%\] {
-    left: 450%;
   }
   .z-\[1000\] {
     z-index: 1000;
   }
   .m-0 {
     margin: calc(var(--spacing) * 0);
-  }
-  .m-\[0\] {
-    margin: 0;
-  }
-  .m-\[1170px\] {
-    margin: 1170px;
   }
   .m-auto {
     margin: auto;
@@ -317,14 +229,14 @@
   .mt-\[5rem\] {
     margin-top: 5rem;
   }
+  .mt-\[7px\] {
+    margin-top: 7px;
+  }
   .mt-\[10px\] {
     margin-top: 10px;
   }
-  .mt-\[20px\] {
-    margin-top: 20px;
-  }
-  .mt-\[100rem\] {
-    margin-top: 100rem;
+  .mt-\[15px\] {
+    margin-top: 15px;
   }
   .mr-\[1rem\] {
     margin-right: 1rem;
@@ -338,14 +250,8 @@
   .mb-\[10px\] {
     margin-bottom: 10px;
   }
-  .mb-\[20px\] {
-    margin-bottom: 20px;
-  }
   .mb-\[30px\] {
     margin-bottom: 30px;
-  }
-  .mb-\[50px\] {
-    margin-bottom: 50px;
   }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
@@ -377,38 +283,14 @@
   .inline-block {
     display: inline-block;
   }
-  .table {
-    display: table;
-  }
   .h-\[78px\] {
     height: 78px;
   }
-  .h-\[100\%\] {
-    height: 100%;
-  }
-  .h-\[100vh\] {
+  .h-screen {
     height: 100vh;
-  }
-  .h-\[200px\] {
-    height: 200px;
-  }
-  .h-\[300px\] {
-    height: 300px;
-  }
-  .h-\[500px\] {
-    height: 500px;
-  }
-  .h-\[1000px\] {
-    height: 1000px;
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
-  }
-  .w-\[10px\] {
-    width: 10px;
-  }
-  .w-\[50\%\] {
-    width: 50%;
   }
   .w-\[75px\] {
     width: 75px;
@@ -419,12 +301,6 @@
   .w-\[100\%\] {
     width: 100%;
   }
-  .w-\[100px\] {
-    width: 100px;
-  }
-  .w-\[150px\] {
-    width: 150px;
-  }
   .w-\[200px\] {
     width: 200px;
   }
@@ -434,104 +310,31 @@
   .w-\[320px\] {
     width: 320px;
   }
-  .w-\[350px\] {
-    width: 350px;
-  }
-  .w-\[400px\] {
-    width: 400px;
-  }
-  .w-\[500px\] {
-    width: 500px;
-  }
-  .w-\[600px\] {
-    width: 600px;
-  }
-  .w-\[700px\] {
-    width: 700px;
-  }
-  .w-\[800px\] {
-    width: 800px;
-  }
-  .max-w-\[100px\] {
-    max-width: 100px;
-  }
-  .max-w-\[300px\] {
-    max-width: 300px;
-  }
-  .max-w-\[400px\] {
-    max-width: 400px;
+  .w-screen {
+    width: 100vw;
   }
   .max-w-\[600px\] {
     max-width: 600px;
   }
-  .max-w-\[1000px\] {
-    max-width: 1000px;
-  }
-  .max-w-\[1170px\] {
-    max-width: 1170px;
-  }
   .max-w-\[1200px\] {
     max-width: 1200px;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .flex-shrink-0 {
     flex-shrink: 0;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .translate-\[-10\%\] {
-    --tw-translate-x: -10%;
-    --tw-translate-y: -10%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[-20\%\] {
-    --tw-translate-x: -20%;
-    --tw-translate-y: -20%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[-40\%\] {
-    --tw-translate-x: -40%;
-    --tw-translate-y: -40%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-\[-50\%\] {
     --tw-translate-x: -50%;
     --tw-translate-y: -50%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-\[-90\%\] {
-    --tw-translate-x: -90%;
-    --tw-translate-y: -90%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[2-\%\] {
-    --tw-translate-x: 2-%;
-    --tw-translate-y: 2-%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[10\%\] {
-    --tw-translate-x: 10%;
-    --tw-translate-y: 10%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[20\%\] {
-    --tw-translate-x: 20%;
-    --tw-translate-y: 20%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[50\%\] {
-    --tw-translate-x: 50%;
-    --tw-translate-y: 50%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .resize {
-    resize: both;
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .flex-col {
+    flex-direction: column;
   }
   .items-center {
     align-items: center;
@@ -542,9 +345,6 @@
   .gap-\[2rem\] {
     gap: 2rem;
   }
-  .gap-\[5px\] {
-    gap: 5px;
-  }
   .gap-\[10px\] {
     gap: 10px;
   }
@@ -553,14 +353,6 @@
   }
   .rounded-\[10px\] {
     border-radius: 10px;
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
-  .border-1 {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-\[1px\] {
     border-style: var(--tw-border-style);
@@ -574,20 +366,15 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
-  .border-\[\#e7e7e7\] {
-    border-color: #e7e7e7;
+  .border-none {
+    --tw-border-style: none;
+    border-style: none;
   }
   .border-black {
     border-color: var(--color-black);
   }
   .border-gray-100 {
     border-color: var(--color-gray-100);
-  }
-  .border-red-500 {
-    border-color: var(--color-red-500);
-  }
-  .border-red-600 {
-    border-color: var(--color-red-600);
   }
   .bg-\[\#101820\] {
     background-color: #101820;
@@ -604,11 +391,16 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-\[url\(\.\/img\/Background-image\.png\)\] {
-    background-image: url(./img/Background-image.png);
+  .bg-gradient-to-b {
+    --tw-gradient-position: to bottom in oklab;
+    background-image: linear-gradient(var(--tw-gradient-stops));
   }
   .bg-\[url\(img\/SchoolBackground\.png\)\] {
     background-image: url(img/SchoolBackground.png);
+  }
+  .from-gray-50 {
+    --tw-gradient-from: var(--color-gray-50);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .bg-cover {
     background-size: cover;
@@ -670,20 +462,17 @@
   .py-\[1rem\] {
     padding-block: 1rem;
   }
-  .py-\[2\.50rem\] {
-    padding-block: 2.50rem;
-  }
   .py-\[2rem\] {
     padding-block: 2rem;
   }
   .py-\[3rem\] {
     padding-block: 3rem;
   }
-  .py-\[4rem\] {
-    padding-block: 4rem;
-  }
   .py-\[5rem\] {
     padding-block: 5rem;
+  }
+  .py-\[7rem\] {
+    padding-block: 7rem;
   }
   .py-\[8rem\] {
     padding-block: 8rem;
@@ -691,15 +480,8 @@
   .py-\[10rem\] {
     padding-block: 10rem;
   }
-  .py-\[rem\] {
-    padding-block: rem;
-  }
   .text-center {
     text-align: center;
-  }
-  .text-sm {
-    font-size: var(--text-sm);
-    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
   .text-sm\/6 {
     font-size: var(--text-sm);
@@ -716,9 +498,6 @@
   }
   .text-\[1\.50rem\] {
     font-size: 1.50rem;
-  }
-  .text-\[1\.80rem\] {
-    font-size: 1.80rem;
   }
   .text-\[1rem\] {
     font-size: 1rem;
@@ -754,9 +533,6 @@
   .text-\[\#FEE715\] {
     color: #FEE715;
   }
-  .text-\[\#ccb800\] {
-    color: #ccb800;
-  }
   .text-black {
     color: var(--color-black);
   }
@@ -778,49 +554,17 @@
   .text-white {
     color: var(--color-white);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .opacity-50 {
-    opacity: 50%;
-  }
   .opacity-80 {
     opacity: 80%;
-  }
-  .shadow-xl\/20 {
-    --tw-shadow-alpha: 20%;
-    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, oklab(from rgb(0 0 0 / 0.1) l a b / 20%)), 0 8px 10px -6px var(--tw-shadow-color, oklab(from rgb(0 0 0 / 0.1) l a b / 20%));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-md {
-    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-xl {
-    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .backdrop-blur-2xl {
     --tw-backdrop-blur: blur(var(--blur-2xl));
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .transition-all {
     transition-property: all;
@@ -907,9 +651,156 @@
       }
     }
   }
+  .focus\:ring-1 {
+    &:focus {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .focus\:ring-\[\#FEE715\] {
+    &:focus {
+      --tw-ring-color: #FEE715;
+    }
+  }
+  .focus\:outline-none {
+    &:focus {
+      --tw-outline-style: none;
+      outline-style: none;
+    }
+  }
   .active\:opacity-70 {
     &:active {
       opacity: 70%;
+    }
+  }
+  .max-\[700px\]\:right-\[-50px\] {
+    @media (width < 700px) {
+      right: -50px;
+    }
+  }
+  .max-\[700px\]\:right-\[-100px\] {
+    @media (width < 700px) {
+      right: -100px;
+    }
+  }
+  .max-\[700px\]\:hidden {
+    @media (width < 700px) {
+      display: none;
+    }
+  }
+  .max-\[700px\]\:px-\[10px\] {
+    @media (width < 700px) {
+      padding-inline: 10px;
+    }
+  }
+  .max-\[700px\]\:px-\[100px\] {
+    @media (width < 700px) {
+      padding-inline: 100px;
+    }
+  }
+  .max-\[420px\]\:right-\[0px\] {
+    @media (width < 420px) {
+      right: 0px;
+    }
+  }
+  .max-\[420px\]\:right-\[10px\] {
+    @media (width < 420px) {
+      right: 10px;
+    }
+  }
+  .max-\[420px\]\:hidden {
+    @media (width < 420px) {
+      display: none;
+    }
+  }
+  .max-\[420px\]\:w-\[250px\] {
+    @media (width < 420px) {
+      width: 250px;
+    }
+  }
+  .max-\[420px\]\:w-\[260px\] {
+    @media (width < 420px) {
+      width: 260px;
+    }
+  }
+  .max-\[420px\]\:w-\[280px\] {
+    @media (width < 420px) {
+      width: 280px;
+    }
+  }
+  .max-\[420px\]\:text-\[1\.50rem\] {
+    @media (width < 420px) {
+      font-size: 1.50rem;
+    }
+  }
+  .max-\[420px\]\:text-\[1\.60rem\] {
+    @media (width < 420px) {
+      font-size: 1.60rem;
+    }
+  }
+  .max-cp\:grid-cols-1 {
+    @media (width < 300px) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .max-xl\:hidden {
+    @media (width < 80rem) {
+      display: none;
+    }
+  }
+  .max-xl\:grid-cols-1 {
+    @media (width < 80rem) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .max-xl\:text-\[1rem\] {
+    @media (width < 80rem) {
+      font-size: 1rem;
+    }
+  }
+  .max-lg\:hidden {
+    @media (width < 64rem) {
+      display: none;
+    }
+  }
+  .max-lg\:grid-cols-1 {
+    @media (width < 64rem) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .max-lg\:text-\[1rem\] {
+    @media (width < 64rem) {
+      font-size: 1rem;
+    }
+  }
+  .max-lg\:text-\[1rerm\] {
+    @media (width < 64rem) {
+      color: 1rerm;
+    }
+  }
+  .max-md\:hidden {
+    @media (width < 48rem) {
+      display: none;
+    }
+  }
+  .max-md\:grid-cols-1 {
+    @media (width < 48rem) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .max-md\:object-none {
+    @media (width < 48rem) {
+      object-fit: none;
+    }
+  }
+  .cp\:grid-cols-1 {
+    @media (width >= 300px) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
+  .cp\:grid-cols-3 {
+    @media (width >= 300px) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
 }
@@ -938,6 +829,48 @@ body {
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-gradient-position {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-via {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-to {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-via-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+@property --tw-gradient-via-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 50%;
+}
+@property --tw-gradient-to-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 100%;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -1008,11 +941,6 @@ body {
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-backdrop-blur {
   syntax: "*";
   inherits: false;
@@ -1056,6 +984,15 @@ body {
       --tw-translate-y: 0;
       --tw-translate-z: 0;
       --tw-border-style: solid;
+      --tw-gradient-position: initial;
+      --tw-gradient-from: #0000;
+      --tw-gradient-via: #0000;
+      --tw-gradient-to: #0000;
+      --tw-gradient-stops: initial;
+      --tw-gradient-via-stops: initial;
+      --tw-gradient-from-position: 0%;
+      --tw-gradient-via-position: 50%;
+      --tw-gradient-to-position: 100%;
       --tw-font-weight: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
@@ -1071,7 +1008,6 @@ body {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-backdrop-blur: initial;
       --tw-backdrop-brightness: initial;
       --tw-backdrop-contrast: initial;
