--- a/src/output.css
+++ b/src/output.css
@@ -244,6 +244,9 @@
   .mt-\[4rem\] {
     margin-top: 4rem;
   }
+  .mt-\[5px\] {
+    margin-top: 5px;
+  }
   .mt-\[5rem\] {
     margin-top: 5rem;
   }
