--- a/src/output.css
+++ b/src/output.css
@@ -16,6 +16,7 @@
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
+    --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-700: oklch(37.3% 0.034 259.733);
@@ -345,11 +346,20 @@
   .w-\[100\%\] {
     width: 100%;
   }
+  .w-\[100px\] {
+    width: 100px;
+  }
   .w-\[200px\] {
     width: 200px;
   }
+  .w-\[250px\] {
+    width: 250px;
+  }
   .w-\[280px\] {
     width: 280px;
+  }
+  .w-\[290px\] {
+    width: 290px;
   }
   .w-\[300px\] {
     width: 300px;
@@ -418,6 +428,9 @@
   }
   .overflow-hidden {
     overflow: hidden;
+  }
+  .rounded {
+    border-radius: 0.25rem;
   }
   .rounded-\[5px\] {
     border-radius: 5px;
@@ -589,6 +602,9 @@
   .px-\[5rem\] {
     padding-inline: 5rem;
   }
+  .px-\[10px\] {
+    padding-inline: 10px;
+  }
   .px-\[10rem\] {
     padding-inline: 10rem;
   }
@@ -619,8 +635,14 @@
   .py-\[8rem\] {
     padding-block: 8rem;
   }
+  .py-\[10px\] {
+    padding-block: 10px;
+  }
   .py-\[10rem\] {
     padding-block: 10rem;
+  }
+  .py-\[20px\] {
+    padding-block: 20px;
   }
   .pt-\[5rem\] {
     padding-top: 5rem;
@@ -660,6 +682,9 @@
   .text-\[4rem\] {
     font-size: 4rem;
   }
+  .text-\[5rem\] {
+    font-size: 5rem;
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -687,6 +712,12 @@
   }
   .text-blue-600 {
     color: var(--color-blue-600);
+  }
+  .text-gray-200 {
+    color: var(--color-gray-200);
+  }
+  .text-gray-300 {
+    color: var(--color-gray-300);
   }
   .text-gray-600 {
     color: var(--color-gray-600);
@@ -905,6 +936,11 @@
       font-size: 0.90rem;
     }
   }
+  .max-\[1100px\]\:grid-cols-1 {
+    @media (width < 1100px) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+  }
   .max-\[1045px\]\:grid-cols-1 {
     @media (width < 1045px) {
       grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -918,6 +954,11 @@
   .max-\[800px\]\:hidden {
     @media (width < 800px) {
       display: none;
+    }
+  }
+  .max-\[800px\]\:grid-cols-1 {
+    @media (width < 800px) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
   .max-\[700px\]\:hidden {
